--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,31 @@
     margin: 0;
     font-family: "Poppins", sans-serif;
 }
+
+input[type="range"] {
+-webkit-appearance: none;
+background: transparent;
+appearance: none;
+}
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type="range"]::-webkit-slider-runnable-track {
+    background: #053a5f;
+    height: 0.5rem;
+    border-radius: 0.5rem;
+  }
+  
+  /******** Firefox ********/
+  input[type="range"]::-moz-range-track {
+    background: #053a5f;
+    height: 0.5rem;
+  }
+  /***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    margin-top: -5px; /* Centers thumb on the track */
+    background-color: #5cd5eb;
+    border-radius: 1rem;
+    height: 1rem;
+    width: 1rem;    
+ }
